--- a/public/rsc/css/style.css
+++ b/public/rsc/css/style.css
@@ -1,13 +1,12 @@
 
-
 body {
   background-color: #A5BAD3;
-  background-image: url('/public/rsc/img/movestarbackground.gif');
+  background-image: url('/rsc/img/movestarbackground.gif');
   background-size: 5%;
   color: rgb(0, 0, 0);
   font-weight: bold;
   font-family: 'basiic';
-  cursor: url('/public/rsc/img/Normal\ Select.cur'), auto;
+  cursor: url('/rsc/img/Normal\ Select.cur'), auto;
 }
 
 h1 {
@@ -15,7 +14,7 @@ h1 {
 }
 
 a {
-  cursor: url('/public/rsc/img/Link\ Select.cur'), auto;
+  cursor: url('/rsc/img/Link\ Select.cur'), auto;
 }
 
 a:link, a:visited{
@@ -39,7 +38,7 @@ hr {
   padding-left: 30px;
   padding-right: 35px;
   padding-top: 55px;
-  border-image: url('/public/rsc/img/border.jpg');
+  border-image: url('/rsc/img/border.jpg');
   /* top | right | bottom | left */
   border-image-slice: 40 40 41 40;
   border-image-width: 40px;
@@ -194,7 +193,7 @@ hr {
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
-  content: url("/public/rsc/img/hellogira1.gif");
+  content: url("/rsc/img/hellogira1.gif");
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 5px;
@@ -261,7 +260,7 @@ hr {
   transform: translateY(-15px);
   height: 80%;
   width: 60%;
-  content: url(/public/rsc/img/guestart.gif);
+  content: url(/rsc/img/guestart.gif);
 }
 
 #logTitle {
@@ -436,7 +435,7 @@ hr {
 }
 
 .todoBullet {
-  content: url("/public/rsc/img/scribbleland_Pixel44.gif");
+  content: url("/rsc/img/scribbleland_Pixel44.gif");
   margin-right: 5px;
   width: 20px;
   height: 20px;
@@ -451,8 +450,8 @@ hr {
 
 .heartBanner {
   background-repeat: space;
-  background-image: url("/public/rsc/img/hearts_blinkie.gif");
-  background: url("/public/rsc/img/hearts_blinkie.gif") repeat space;
+  background-image: url("/rsc/img/hearts_blinkie.gif");
+  background: url("/rsc/img/hearts_blinkie.gif") repeat space;
   background-size: 20%;
   margin-bottom: 15px;
 }
@@ -469,24 +468,24 @@ hr {
 /* Fonts */
 @font-face {
   font-family: "dogica";
-  src: url("/public/rsc/fonts/dogica.ttf");
+  src: url("/rsc/fonts/dogica.ttf");
 }
 @font-face {
   font-family: "dogica";
-  src: url("/public/rsc/fonts/dogicabold.ttf");
+  src: url("/rsc/fonts/dogicabold.ttf");
   font-weight: bold;
 }
 @font-face {
   font-family: "Daydream";
-  src: url("/public/rsc/fonts/Daydream.ttf");
+  src: url("/rsc/fonts/Daydream.ttf");
 }
 @font-face {
   font-family: "basiic";
-  src: url("/public/rsc/fonts/basiic.ttf");
+  src: url("/rsc/fonts/basiic.ttf");
 }
 @font-face {
   font-family: "RomanceA";
-  src: url("/public/rsc/fonts/RomanceA.ttf");
+  src: url("/rsc/fonts/RomanceA.ttf");
 }
 
 /* Fade in and Up on webpage load animation */
