--- a/public/rsc/css/style.css
+++ b/public/rsc/css/style.css
@@ -446,6 +446,7 @@ hr {
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
+  padding-top: 8%;
 }
 
 .heartBanner {
