--- a/public/rsc/css/style.css
+++ b/public/rsc/css/style.css
@@ -1,4 +1,11 @@
 
+html{
+  cursor: url('/rsc/img/NormalSelect.cur'), auto;
+}
+html a{
+  cursor: url('/rsc/img/LinkSelect.cur'), auto;
+}
+
 body {
   background-color: #A5BAD3;
   background-image: url('/rsc/img/movestarbackground.gif');
@@ -6,16 +13,16 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   font-family: 'basiic';
-  cursor: url('/rsc/img/NormalSelect.cur'), auto;
+  /* cursor: url('/rsc/img/NormalSelect.cur'), auto; */
 }
 
 h1 {
   font-family: 'Daydream'
 }
 
-a {
+/* a {
   cursor: url('/rsc/img/LinkSelect.cur'), auto;
-}
+} */
 
 a:link, a:visited{
   color: #025fd1;
