--- a/public/rsc/css/style.css
+++ b/public/rsc/css/style.css
@@ -1,9 +1,9 @@
 
 html{
-  cursor: url('/rsc/img/NormalSelect.cur'), auto;
+  cursor: url('/rsc/img/NormalSelect.png'), auto;
 }
 html a{
-  cursor: url('/rsc/img/LinkSelect.cur'), auto;
+  cursor: url('/rsc/img/LinkSelect.png'), auto;
 }
 
 body {
