--- a/public/rsc/css/style.css
+++ b/public/rsc/css/style.css
@@ -1,9 +1,9 @@
 
 html{
-  cursor: url('./rsc/img/NormalSelect.png'), auto;
+  cursor: url('../img/NormalSelect.png'), auto;
 }
 html a{
-  cursor: url('./rsc/img/LinkSelect.png'), auto;
+  cursor: url('../img/LinkSelect.png'), auto;
 }
 
 body {
@@ -40,7 +40,7 @@ hr {
   padding-left: 30px;
   padding-right: 35px;
   padding-top: 55px;
-  border-image: url('/rsc/img/border.jpg');
+  border-image: url('../img/border.jpg');
   /* top | right | bottom | left */
   border-image-slice: 40 40 41 40;
   border-image-width: 40px;
@@ -207,7 +207,7 @@ hr {
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
-  content: url("/rsc/img/hellogira1.gif");
+  content: url("../img/hellogira1.gif");
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 5px;
@@ -274,7 +274,7 @@ hr {
   transform: translateY(-15px);
   height: 80%;
   width: 60%;
-  content: url(/rsc/img/guestart.gif);
+  content: url(../img/guestart.gif);
 }
 
 #logTitle {
@@ -449,7 +449,7 @@ hr {
 }
 
 .todoBullet {
-  content: url("/rsc/img/scribbleland_Pixel44.gif");
+  content: url("../img/scribbleland_Pixel44.gif");
   margin-right: 5px;
   width: 20px;
   height: 20px;
@@ -465,8 +465,8 @@ hr {
 
 .heartBanner {
   background-repeat: space;
-  background-image: url("/rsc/img/hearts_blinkie.gif");
-  background: url("/rsc/img/hearts_blinkie.gif") repeat space;
+  background-image: url("../img/hearts_blinkie.gif");
+  background: url("../img/hearts_blinkie.gif") repeat space;
   background-size: 20%;
   margin-bottom: 15px;
 }
@@ -483,24 +483,24 @@ hr {
 /* Fonts */
 @font-face {
   font-family: "dogica";
-  src: url("/rsc/fonts/dogica.ttf");
+  src: url("../fonts/dogica.ttf");
 }
 @font-face {
   font-family: "dogica";
-  src: url("/rsc/fonts/dogicabold.ttf");
+  src: url("../fonts/dogicabold.ttf");
   font-weight: bold;
 }
 @font-face {
   font-family: "Daydream";
-  src: url("/rsc/fonts/Daydream.ttf");
+  src: url("../fonts/Daydream.ttf");
 }
 @font-face {
   font-family: "basiic";
-  src: url("/rsc/fonts/basiic.ttf");
+  src: url("../fonts/basiic.ttf");
 }
 @font-face {
   font-family: "RomanceA";
-  src: url("/rsc/fonts/RomanceA.ttf");
+  src: url("../fonts/RomanceA.ttf");
 }
 
 /* Fade in and Up on webpage load animation */
